# tauri-v2-sample-app

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
